--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+fastapi = "^0.115.12"
+uvicorn = "^0.34.1"
+python-multipart = "^0.0.20"
+pymupdf = "^1.25.5"
 
 
 [build-system]
