schema design and db creation done

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "axios": "^1.8.4",
     "next": "15.2.4",
+    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
