--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ langchain = "^0.3.25"
 langchain-community = "^0.3.23"
 langchain-chroma = "^0.2.3"
 langchain-openai = "^0.3.16"
+sqlmodel = "^0.0.24"
+psycopg = {extras = ["binary"], version = "^3.2.8"}
 
 
 
